--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,3 +15,4 @@
 <link href="/css/table.css" rel="stylesheet" />
 <link href="/css/highlight.css" rel="stylesheet" />
 <link href="/css/copy.css" rel="stylesheet" />
+<link href="/css/tags.css" rel="stylesheet" />
