--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,4 @@
-{{ define "main" }}
+{{/* {{ define "main" }}
 <div class="container">
   <div class="row justify-content-center">
     <div class="col">
@@ -18,4 +18,4 @@
     </div>
   </div>
 </div>
-{{ end }}
+{{ end }} */}}
