--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,11 +2,15 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="icon" href="{{ "favicon.ico" | absURL }}">
-<!-- Bootstrap CSS -->
-<link href="/bootstrap@5.0.2/css/bootstrap.min.css" rel="stylesheet" />
-{{ partial "custom-og.html" . }} {{ partial "custom-analytics.html" . }}
 
 <title>{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
+
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+<!-- Bootstrap CSS -->
+<link href="/bootstrap@5.0.2/css/bootstrap.min.css" rel="stylesheet" />
 
 <!-- Custom styles -->
 <link href="/css/main.css" rel="stylesheet" />
@@ -17,3 +21,4 @@
 <link href="/css/highlight.css" rel="stylesheet" />
 <link href="/css/copy.css" rel="stylesheet" />
 <link href="/css/tags.css" rel="stylesheet" />
+<link href="/css/content.css" rel="stylesheet" />
