--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
 <div class="container">
-  <h2 class="mb-4 mt-4 col-md-4" style="border-radius: 5px;padding: 5px;color: {{ .Params.color }}!important; background-color: {{ .Params.background }}!important;">{{ .Title }}</h2>
+  <h2 class="mb-4 mt-4 col-md-4" >
+    <span style="border-radius: 5px;padding: 5px;color: {{ .Params.color }}!important; background-color: {{ .Params.background }}!important;">{{ .Title }} </span>
+  </h2>
   <p class="text-muted mb-5">
     {{ .Description }}
   </p>
