--- a/layouts/courses/single.html
+++ b/layouts/courses/single.html
@@ -30,7 +30,7 @@
               <a href="{{ $.Page.Site.BaseURL }}tags/{{ . }}">
                 <span
                   class="badge bg-secondary"
-                  style="color: {{ $tagPage.Params.color }}!important; background-color: {{ $tagPage.Params.background }}!important;"
+                  style="border: 1px solid;color: {{ $tagPage.Params.color }}!important; background-color: {{ $tagPage.Params.background }}!important;"
                 >
                   #{{ . }}
                 </span>
