--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -29,7 +29,7 @@
          {{ range .Params.tags }}
          {{ $tagPage := $.Site.GetPage (printf "/tags/%s" .) }}
          <a href="{{ $.Page.Site.BaseURL }}tags/{{ . }}">
-           <span class="badge bg-secondary" style="color: {{ $tagPage.Params.color }}!important; background-color: {{ $tagPage.Params.background }}!important;">
+           <span class="badge bg-secondary" style="border: 1px solid;color: {{ $tagPage.Params.color }}!important; background-color: {{ $tagPage.Params.background }}!important;">
            #{{ . }}
            </span>
          </a>
