--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,13 +20,13 @@
 
   <a href="#" id="back-to-top" title="Back to top">&uarr;</a>
 
-  <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.min.js"></script>
   <script src="/bootstrap@5.0.2/js/bootstrap.bundle.min.js"></script>
   <script src="/js/copyClipboard.js"></script>
   <script src="/tocbot/tocbot.min.js"></script>
   <script src="/js/mermaid@10.7.0.min.js"></script>
   <script src="/js/menu.js"></script>
   {{ if .IsHome }}
+  <script src="/js/fuse.min.js"></script>
   <script src="/js/search.js"></script>
   {{ end }}
 
