--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <!-- Required meta tags -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="icon" href="{{ "favicon.ico" | absURL }}"> {{ if
+<link rel="icon" href="{{ "favicon.ico" | absURL }}"> {{if
 .Site.Params.google_site_verification.key }}
 <meta
   name="google-site-verification"
@@ -14,7 +14,10 @@
 
 <title>{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
 
-<link rel="stylesheet" href="/css/font-awesome.min.css" />
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 <!-- Bootstrap CSS -->
 <link href="/bootstrap@5.0.2/css/bootstrap.min.css" rel="stylesheet" />
 
