--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -3,6 +3,11 @@
   name="keywords"
   content="{{ if .Params.tags }}{{ range .Params.tags }}{{ . }}, {{ end }}{{ else }}{{ .Site.Params.seo.default_keywords }}{{ end }}"
 />
+<link rel="canonical" href="{{ .Permalink }}" />
+<meta
+  property="og:image:alt"
+  content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
+/>
 <meta name="og:title" content="{{ .Title }}" />
 <meta name="og:type" content="{{ .Type }}" />
 <meta name="og:url" content="{{ .Permalink }}" />
@@ -16,5 +21,19 @@
   name="description"
   content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
 />
+<meta
+  name="og:description"
+  content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
+/>
+
 <meta name="og:locale" content="{{ .Site.Language.Lang }}" />
 <meta name="author" content="{{ .Site.Params.seo.default_author }}" />
+<meta name="og:author" content="{{ .Site.Params.seo.default_author }}" />
+
+<meta property="article:published_time" content="{{ .Date.Format
+"2006-01-02T15:04:05Z07:00" }}" />
+<meta property="article:section" content="{{ .Section }}" />
+<meta property="article:modified_time" content="{{ .Lastmod.Format
+"2006-01-02T15:04:05Z07:00" }}" /> {{if .Site.Params.seo.fb_app_id}}
+<meta property="fb:app_id" content="{{ .Site.Params.seo.fb_app_id }}" />
+{{end}}
