--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -40,4 +40,6 @@
 <meta property="article:modified_time" content="{{ .Lastmod.Format
 "2006-01-02T15:04:05Z07:00" }}" /> {{if .Site.Params.seo.fb_app_id}}
 <meta property="fb:app_id" content="{{ .Site.Params.seo.fb_app_id }}" />
-{{end}}
+{{end}} {{ range .Scratch.Get "relatedPages" }}
+<meta property="og:see_also" content="{{ .Permalink }}" />
+{{ end }}
