--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -7,19 +7,17 @@
 <meta name="og:title" content="{{ .Title }}" />
 <meta name="og:type" content="{{ .Type }}" />
 <meta name="og:url" content="{{ .Permalink }}" />
-{{ if .Params.images }} {{ range .Params.images }}
-<meta name="og:image" content="{{ . | absURL }}" />
-<meta
-  property="og:image:alt"
-  content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
-/>
-{{ end }} {{ else }}
+{{ with .Params.images }}
+<meta name="og:image" content="{{ index . 0 | absURL }}" />
+
+{{ else }}
 <meta name="og:image" content="{{ .Site.Params.seo.default_image | absURL }}" />
+{{ end }}
+
 <meta
-  property="og:image:alt"
+  name="og:image:alt"
   content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
 />
-{{ end }}
 <meta name="og:site_name" content="{{ .Site.Title }}" />
 <meta
   name="description"
