--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -8,9 +8,14 @@
 <meta name="og:type" content="{{ .Type }}" />
 <meta name="og:url" content="{{ .Permalink }}" />
 {{ with .Params.images }}
+<meta property="og:image" content="{{ index . 0 | absURL }}" />
 <meta name="og:image" content="{{ index . 0 | absURL }}" />
 
 {{ else }}
+<meta
+  property="og:image"
+  content="{{ .Site.Params.seo.default_image | absURL }}"
+/>
 <meta name="og:image" content="{{ .Site.Params.seo.default_image | absURL }}" />
 {{ end }}
 
