--- a/layouts/shortcodes/youtube.html
+++ b/layouts/shortcodes/youtube.html
@@ -1,2 +1,8 @@
-<div class="youtube-player" data-id="{{ .Get 0 }}"></div>
-{{ .Page.Scratch.Set "hasYoutube" true }}
+<iframe
+  width="100%"
+  height="500px"
+  src="https://www.youtube.com/embed/{{ .Get 0 }}"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
