--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -4,16 +4,13 @@
   content="{{ if .Params.tags }}{{ range .Params.tags }}{{ . }}, {{ end }}{{ else }}{{ .Site.Params.seo.default_keywords }}{{ end }}"
 />
 <link rel="canonical" href="{{ .Permalink }}" />
-<meta name="og:title" content="{{ .Title }}" />
-<meta name="og:type" content="{{ .Type }}" />
-<meta name="og:url" content="{{ .Permalink }}" />
+<meta property="og:type" content="{{ .Type }}" />
 
-{{ with .Params.images }} {{ range $index, $image := . }} {{ if eq $index 0 }}
+<meta property="og:url" content="{{ .Permalink }}" />
+
+{{ with .Params.images }} {{ range $index, $image := . }}
 <meta property="og:image" content="{{ $image | absURL }}" />
-{{ end }}
-<meta name="og:image" content="{{ $image | absURL }}" />
 {{ end }} {{ else }}
-<meta name="og:image" content="{{ .Site.Params.seo.default_image | absURL }}" />
 <meta
   property="og:image"
   content="{{ .Site.Params.seo.default_image | absURL }}"
@@ -21,22 +18,22 @@
 {{ end }}
 
 <meta
-  name="og:image:alt"
+  property="og:image:alt"
   content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
 />
-<meta name="og:site_name" content="{{ .Site.Title }}" />
+<meta property="og:site_name" content="{{ .Site.Title }}" />
+
 <meta
   name="description"
-  content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
+  content="{{ with .Description }}{{ . | truncate 170 }}{{ else }}{{ .Site.Params.seo.default_description | truncate 170 }}{{ end }}"
 />
 <meta
-  name="og:description"
-  content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
+  property="og:description"
+  content="{{ with .Description }}{{ . | truncate 170 }}{{ else }}{{ .Site.Params.seo.default_description | truncate 170 }}{{ end }}"
 />
-
-<meta name="og:locale" content="{{ .Site.Language.Lang }}" />
+<meta property="og:locale" content="{{ .Site.Language.Lang }}" />
 <meta name="author" content="{{ .Site.Params.seo.default_author }}" />
-<meta name="og:author" content="{{ .Site.Params.seo.default_author }}" />
+<meta property="og:author" content="{{ .Site.Params.seo.default_author }}" />
 
 <meta property="article:published_time" content="{{ .Date.Format
 "2006-01-02T15:04:05Z07:00" }}" />
