--- a/layouts/partials/seo.html
+++ b/layouts/partials/seo.html
@@ -5,9 +5,7 @@
 />
 <link rel="canonical" href="{{ .Permalink }}" />
 <meta property="og:type" content="{{ .Type }}" />
-
 <meta property="og:url" content="{{ .Permalink }}" />
-
 {{ with .Params.images }} {{ range $index, $image := . }}
 <meta property="og:image" content="{{ $image | absURL }}" />
 {{ end }} {{ else }}
@@ -21,7 +19,6 @@
   property="og:image:alt"
   content="{{ if .Description }}{{ .Description }}{{ else }}{{ .Site.Params.seo.default_description }}{{ end }}"
 />
-<meta property="og:site_name" content="{{ .Site.Title }}" />
 
 <meta
   name="description"
@@ -42,3 +39,10 @@
 "2006-01-02T15:04:05Z07:00" }}" /> {{if .Site.Params.seo.fb_app_id}}
 <meta property="fb:app_id" content="{{ .Site.Params.seo.fb_app_id }}" />
 {{end}}
+
+<meta property="og:site_name" content="{{ .Site.Title }}" />
+<meta property="og:title" content="{{ .Site.Title }}" />
+<meta
+  property="article:tag"
+  content="{{ if .Params.tags }}{{ range .Params.tags }}{{ . }}, {{ end }}{{ else }}{{ .Site.Params.seo.default_keywords }}{{ end }}"
+/>
