--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,7 +15,9 @@
 ></script>
 {{end}}
 <!-- Seo -->
-{{ partial "seo.html" . }}
+{{ partial "seo.html" . }} {{ range .Pages }} {{ if ne .Permalink $.Permalink }}
+<meta property="og:see_also" content="{{ .Permalink }}" />
+{{ end }} {{ end }}
 
 <title>{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
 
