--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="{{ "/" | absLangURL }}">
       <img src="{{ .Site.Params.logo }}" alt="Brand" />
     </a>
     <button
@@ -21,39 +21,28 @@
           <a class="nav-link" href="{{ .URL }}">{{ .Name }}</a>
         </li>
         {{ end }}
-      </ul>
-      {{/*
-      <form class="d-flex">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-      </form>
-      */}}
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a
-            aria-expanded="false"
-            class="nav-link dropdown-toggle"
-            data-bs-toggle="dropdown"
-            href="#"
-            id="navbarDropdownMenuLink"
-            role="button"
-          >
-            {{ .Site.Language.LanguageName }}
-          </a>
-          <ul aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu">
-            {{ range .Site.Home.AllTranslations }}
-            <li>
-              <a class="dropdown-item" href="{{ .RelPermalink }}">
-                {{ .Language.LanguageName }}
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+              <a
+                  aria-expanded="false"
+                  class="nav-link dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  href="#"
+                  id="navbarDropdownMenuLink"
+                  role="button"
+              >
+                  {{ .Site.Language.LanguageName }}
               </a>
-            </li>
-            {{ end }}
-          </ul>
-        </li>
+              <ul aria-labelledby="navbarDropdownMenuLink" class="dropdown-menu">
+                  {{ range .Page.AllTranslations }}
+                  <li>
+                      <a class="dropdown-item" href="{{ .RelPermalink }}">
+                          {{ .Language.LanguageName }}
+                      </a>
+                  </li>
+                  {{ end }}
+              </ul>
+          </li>
       </ul>
     </div>
   </div>
